Fix upcoming session contrast

--- a/src/styles/UpcomingWeekendSummary.module.scss
+++ b/src/styles/UpcomingWeekendSummary.module.scss
@@ -28,7 +28,7 @@
     // Highlight the upcoming session
     &[data-is-upcoming="true"] {
       border: 2px solid green;
-      background-color: #afccaf;
+      background-color: #4c654c;
     }
 
     // Grey out sessions which are finished
